--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 
 	<!-- Header section start -->
 	<header class="header-section sp-pad">
-		<h3 class="site-logo">HALO</h3>
+		<h3 class="site-logo">KB Tickets</h3>
 		<form class="search-top">
 			<button class="se-btn"><i class="fa fa-search"></i></button>
 			<input type="text" placeholder="Search.....">
@@ -68,19 +68,19 @@
 	<div class="map-area" id="map-canvas"></div>
 
 
-		<!-- Contact section start -->
+	<!-- Contact section start -->
 	<section class="contact-section set-bg spad" data-setbg="img/contact-bg.jpg">
 		<div class="container-fluid contact-warp">
 			<div class="contact-text">
 				<div class="container p-0">
 					<span class="sp-sub-title">Amazing studio</span>
 					<h3 class="sp-title">Stay in touch</h3>
-					<p>Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada feugiat. Praesent malesuada congue magna at finibus. In hac habi tasse platea dictumst. Curabitur rhoncus auctor eleifend.</p>
+					<p>Get in touch with us if you have any queries regarding ticketing or if you have faced any issues.</p>
 
 					<ul class="con-info">
-						<li><i class="flaticon-phone-call"></i>+45 677 8993000 223</li>
-						<li><i class="flaticon-envelope"></i>office@template.com</li>
-						<li><i class="flaticon-placeholder"></i>Main Str. no 45-46, b3, 56832,<br> Los Angeles, CA</li>
+						<li><i class="flaticon-phone-call"></i>+033 24224562</li>
+						<li><i class="flaticon-envelope"></i>kbtickets@gmail.com</li>
+						<li><i class="flaticon-placeholder"></i>17 Lal Dighi,Dalhousie Square<br> Kolkata,West Bengal</li>
 					</ul>
 				</div>
 			</div>
