--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-xl-4 intro-text">
-					<span class="sp-sub-title">Amazing studio</span>
+					<span class="sp-sub-title">KB Tickets</span>
 					<h3 class="sp-title">We are so Creative</h3>
-					<p>Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada feugiat. Praesent malesuada congue magna at finibus. In hac habitasse platea dictumst. Curabitur rhoncus auctor eleifend. Fusce venenatis diam urna, eu pharetra arcu varius ac. Etiam cursus turpis lectus, id iaculis risus tempor id.</p>
-					<a href="#" class="site-btn">Read More</a>
+					<p>Our previous work helped people by providing travel solutions. Our aim is to make travel for commuters as simplified as possible.</p>
 				</div>
 				<div class="col-xl-7 offset-xl-1">
 					<figure class="intro-img mt-5 mt-xl-0">
@@ -97,182 +96,19 @@
 	</section>
 	<!-- Intro section end -->
 
-
-	<!-- Portfolio section start -->
-	<section class="portfolio-section">
-		<div class="portfolio-warp">
-			<!-- single item -->
-			<div class="single-portfolio set-bg" data-setbg="img/portfolio/1.jpg">
-				<a href="single-work.html" class="portfolio-info">
-					<div class="pfbg set-bg" data-setbg="img/portfolio/1.jpg"></div>
-					<h5>Summer in the desert</h5>
-					<p>Landscape Photography</p>
-				</a>
-			</div>
-			<!-- single item -->
-			<div class="single-portfolio set-bg" data-setbg="img/portfolio/2.jpg">
-				<a href="single-work.html" class="portfolio-info">
-					<div class="pfbg set-bg" data-setbg="img/portfolio/2.jpg"></div>
-					<h5>Summer in the desert</h5>
-					<p>Landscape Photography</p>
-				</a>
-			</div>
-			<!-- single item -->
-			<div class="single-portfolio set-bg" data-setbg="img/portfolio/3.jpg">
-				<a href="single-work.html" class="portfolio-info">
-					<div class="pfbg set-bg" data-setbg="img/portfolio/3.jpg"></div>
-					<h5>Summer in the desert</h5>
-					<p>Landscape Photography</p>
-				</a>
-			</div>
-			<!-- single item -->
-			<div class="single-portfolio sm-wide set-bg" data-setbg="img/portfolio/4.jpg">
-				<a href="single-work.html" class="portfolio-info">
-					<div class="pfbg set-bg" data-setbg="img/portfolio/4.jpg"></div>
-					<h5>Summer in the desert</h5>
-					<p>Landscape Photography</p>
-				</a>
-			</div>
-			<!-- single item -->
-			<div class="single-portfolio sm-wide set-bg " data-setbg="img/portfolio/5.jpg">
-				<a href="single-work.html" class="portfolio-info">
-					<div class="pfbg set-bg" data-setbg="img/portfolio/5.jpg"></div>
-					<h5>Summer in the desert</h5>
-					<p>Landscape Photography</p>
-				</a>
-			</div>
-			<!-- single item -->
-			<div class="single-portfolio set-bg" data-setbg="img/portfolio/6.jpg">
-				<a href="single-work.html" class="portfolio-info">
-					<div class="pfbg set-bg" data-setbg="img/portfolio/6.jpg"></div>
-					<h5>Summer in the desert</h5>
-					<p>Landscape Photography</p>
-				</a>
-			</div>
-			<!-- single item -->
-			<div class="single-portfolio sm-wide md-w-100 set-bg " data-setbg="img/portfolio/7.jpg">
-				<a href="single-work.html" class="portfolio-info">
-					<div class="pfbg set-bg" data-setbg="img/portfolio/7.jpg"></div>
-					<h5>Summer in the desert</h5>
-					<p>Landscape Photography</p>
-				</a>
-			</div>
-		</div>
-		<div class="clearfix"></div>
-	</section>
-	<!-- Portfolio section end -->
-
-
-	<!-- Milestones section start -->
-	<section class="milestones-section spad">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-3 col-md-6 fact-box">
-					<div class="fact-content">
-						<i class="flaticon-gamepad"></i>
-						<h2>48</h2>
-						<p>VIDEO gAMES</p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-6 fact-box">
-					<div class="fact-content">
-						<i class="flaticon-trophy"></i>
-						<h2>7</h2>
-						<p>AWARDS WON</p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-6 fact-box">
-					<div class="fact-content">
-						<i class="flaticon-alarm-clock"></i>
-						<h2>23K</h2>
-						<p>Pictures taken</p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-6 fact-box">
-					<div class="fact-content">
-						<i class="flaticon-laptop"></i>
-						<h2>19</h2>
-						<p>Video tutorials</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Milestones section end -->
-
-
-	<!-- Services section start -->
-	<section class="services-section spad">
-		<div class="container-fluid services-warp">
-			<div class="services-text">
-				<div class="container p-0">
-				<span class="sp-sub-title">Amazing studio</span>
-					<h3 class="sp-title">see What we offer</h3>
-					<p>Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada feugiat. Praesent malesuada congue magna at finibus. In hac habi tasse platea dictumst. Curabitur rhoncus auctor eleifend.</p>
-					<a href="#" class="site-btn">Read More</a>
-				</div>
-			</div>
-			<div class="container p-0">
-				<div class="row">
-					<div class="col-xl-8 offset-xl-4">
-						<div class="row">
-							<div class="col-md-6">
-								<div class="icon-box">
-									<i class="flaticon-video-camera"></i>
-									<h4>Video Footages</h4>
-									<p>Suspendisse dictum enim sit amet libero feugiat. Praesent malesuada congue magna at finibus. In hac habitasse platea dictumst. </p>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="icon-box">
-									<i class="flaticon-photo-camera"></i>
-									<h4>Photo Shootings</h4>
-									<p>Congue magna at finibus. In hac habitasse platea dictumst. Curabitur rhoncus auctor eleifend. Fusce venenatis diam urna, eu pharetra arcu.</p>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="icon-box">
-									<i class="flaticon-safebox"></i>
-									<h4>photo albums</h4>
-									<p>Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada feugiat. Praesent malesuada congue magna at finibus. </p>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="icon-box">
-									<i class="flaticon-idea"></i>
-									<h4>Original ideas</h4>
-									<p>Praesent malesuada congue magna at finibus. In hac habitasse platea dictumst. Curabitur rhoncus auctor eleifend. Fusce venenatis diam urna.</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="service-more-link">
-			<a href="#" class="arrow-btn">
-				<i class="fa fa-angle-right"></i>
-				<i class="fa fa-angle-right"></i>
-				<i class="fa fa-angle-right"></i>
-			</a>
-		</div>
-	</section>
-	<!-- Services section start end -->
-
-
 	<!-- Contact section start -->
 	<section class="contact-section set-bg spad" data-setbg="img/contact-bg.jpg">
 		<div class="container-fluid contact-warp">
 			<div class="contact-text">
 				<div class="container p-0">
-					<span class="sp-sub-title">Amazing studio</span>
+					<span class="sp-sub-title">KB Tickets - Online Ticketing Solution</span>
 					<h3 class="sp-title">Stay in touch</h3>
-					<p>Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada feugiat. Praesent malesuada congue magna at finibus. In hac habi tasse platea dictumst. Curabitur rhoncus auctor eleifend.</p>
+					<p>Get in touch with us if you have any queries regarding ticketing or if you have faced any issues.</p>
 
 					<ul class="con-info">
-						<li><i class="flaticon-phone-call"></i>+45 677 8993000 223</li>
-						<li><i class="flaticon-envelope"></i>office@template.com</li>
-						<li><i class="flaticon-placeholder"></i>Main Str. no 45-46, b3, 56832,<br> Los Angeles, CA</li>
+						<li><i class="flaticon-phone-call"></i>+033 24224562</li>
+						<li><i class="flaticon-envelope"></i>kbtickets@gmail.com</li>
+						<li><i class="flaticon-placeholder"></i>17 Lal Dighi,Dalhousie Square<br> Kolkata,West Bengal</li>
 					</ul>
 				</div>
 			</div>
